--- a/thesis/main.bib
+++ b/thesis/main.bib
@@ -10,6 +10,13 @@
   note = {Accessed: 2017-05-10}
 }
 
+@misc{seqalign,
+  title = {Sequence Alignment and Dynamic Programming},
+  author={6.096 ? Algorithms for Computational Biology, class at MIT},
+  howpublished = {\url{https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-algorithms-for-computational-biology-spring-2005/lecture-notes/lecture5_newest.pdf}},
+  note = {Accessed: 2016-10-01}
+}
+
 @article{byrd-testbed, 
   title        =           {Towards a Standard Testbed for Optical Music Recognition: Definitions, Metrics, and Page Images}, 
   volume   =         {44.3}, 
@@ -98,10 +105,25 @@
   year         = 2013
  }
  
+ @misc{IMSLP,
+  key = {IMSLP}
+  title = {IMSLP/Petrucci Library Free Public Domain Sheet Music},
+  howpublished = {\url{http://imslp.org/}},
+  note = {Accessed: 2015-10-10}
+}
+ 
 @misc{k525,
-  title = {Eine Kleine Nachtmusik, K. 525},
+  title = {Eine kleine Nachtmusik, K. 525},
   author={Mozart, Wolfgang Amadeus},
   howpublished = {\url{http://ks.petruccimusiclibrary.org/files/imglnks/usimg/5/57/IMSLP01776-Mozart_EineKleineNachtmusik_Score.pdf}},
+  note = {Accessed: 2017-05-23}
+}
+
+
+@misc{k160,
+  title = {String Quartet No.7 in E-flat major, K.160/159a},
+  author={Mozart, Wolfgang Amadeus},
+  howpublished = {\url{http://ks.petruccimusiclibrary.org/files/imglnks/usimg/f/f1/IMSLP64127-PMLP05214-Mozart_Werke_Breitkopf_Serie_14_KV160.pdf}},
   note = {Accessed: 2017-05-23}
 }
 
